@@ -13,9 +13,9 @@ ulong	KEYWORD1
 fixedMath	KEYWORD1
 
 utils	KEYWORD1
-SET_PIN13_OUT	LITERAL1
-SET_PIN13_HIGH	LITERAL1
-SET_PIN13_LOW	LITERAL1
+setPin13Out	KEYWORD2
+setPin13High	KEYWORD2
+setPin13Low	KEYWORD2
 
 
 LowPassFilter	KEYWORD1
